--- a/app/src/main/res/layout/fragment_taskdesc.xml
+++ b/app/src/main/res/layout/fragment_taskdesc.xml
@@ -10,25 +10,31 @@
         android:id="@+id/desc_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#eaebed"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textdesc"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:background="#ffffffff"
             android:text="task description" />
 
         <TextView
             android:id="@+id/expectedprogress"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:background="#ffffffff"
             android:text="expexted process" />
 
         <EditText
             android:id="@+id/actualprogress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
+            android:background="#ffffffff"
             android:hint="Actual Progress"
             android:inputType="phone"
             android:maxLength="10"
@@ -39,14 +45,12 @@
             android:id="@+id/Submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="submit" />
+            android:layout_marginTop="10dp"
+            android:background="#4286f4"
+            android:text="submit"
+            android:textColor="#ffffffff"
+            android:textSize="25sp" />
     </LinearLayout>
-
-        <ProgressBar
-            android:id="@+id/desc_progressbar"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="175dp" />
 
 
 </RelativeLayout>
