--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,17 +11,19 @@
     <!-- Login progress -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-150dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/login_back"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
-            android:layout_marginTop="0dp"
-            android:text="Shoppers"
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="50dp"
+            android:padding="5dp"
+            android:text="Construction Manager"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="30sp" />
@@ -30,6 +32,8 @@
             android:id="@+id/card_view_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:layout_marginTop="0dp"
             android:elevation="24dp"
             android:padding="10dp"
@@ -52,6 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
 
+                    android:hint="Username"
                     android:inputType="phone"
                     android:maxLength="10"
                     android:maxLines="1"
@@ -64,11 +69,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
 
-                    android:imeActionId="@+id/login"
+                    android:hint="Password"
 
+                    android:imeActionId="@+id/login"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
+                    android:password="true"
                     android:singleLine="true" />
 
 
@@ -80,9 +87,11 @@
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="15dp"
 
+                    android:background="#4286f4"
                     android:shadowDx="4"
-                    android:shadowDy="10"
 
+                    android:shadowDy="10"
+                    android:text="Log In"
                     android:textColor="@android:color/white"
                     android:textSize="15sp"
                     android:textStyle="bold" />
