--- a/app/src/main/res/layout/task_model.xml
+++ b/app/src/main/res/layout/task_model.xml
@@ -8,15 +8,34 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        app:cardElevation="10dp">
+        android:layout_marginTop="10dp"
+        app:cardElevation="0dp">
 
-        <TextView
-            android:id="@+id/task_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="fill"
-            android:text="task"
-            android:textSize="40sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/images" />
+
+            <TextView
+                android:id="@+id/task_name"
+                android:layout_width="94dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2"
+                android:text="task"
+                android:textSize="25sp" />
+
+        </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
